--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,11 @@
             "type": "shell",
             "label": "Run Make",
             "command": "make calculator",            
+        },
+        {
+            "type": "shell",
+            "label": "Run Tests",
+            "command": "make calculator",            
         }
     ],
     "version": "2.0.0"
