--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
         "stop_token": "cpp",
         "streambuf": "cpp",
         "iostream": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "*.inc": "cpp",
+        "string": "cpp"
     }
 }
