--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
             "name": "Debug Tests",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/operationTests",
+            "program": "${workspaceFolder}/bin/test",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
